objects/UserLicenseConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_TemplateId__c</fullName>
        <label>Email TemplateId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_DAZN__c</fullName>
        <label>Link to DAZN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_for_Community_License__c</fullName>
        <label>Percent for Community License</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_for_Salesfore_License__c</fullName>
        <label>Percent for Salesfore License</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Community_Licenses__c</fullName>
        <label>Total Community Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Standard_License__c</fullName>
        <label>Total Standard License</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User License Configuration</label>
</CustomObject>